===== 1.9.1 (Oct ??, 2013) =====
* hi-res launcher icon
* Updated Czech localization (by Marek Pavelka)
* mobi: blockquote tag support
* fixed book duplicates porblem on some devices

===== 1.9 (Oct 14, 2013) =====
* Dictionary support
	** added OpenDictionary support (code provided by Paragon Software), better integration with SlovoEd dictionaries
	** fixed ColorDict 3 integration
	** added Lingvo integration
* Network library
	** Disable/enable separate catalogs
	** Change order of catalogs
	** Fixed unexpected 'Catalog is empty' messages
* Formats
	** mobi: added support for <div> & <mbp:pagebreak> tags
	** ePub: fixed reading of files generated from LibreOffice
	** ePub: no empty paragraphs before/after the cover
	** RTF: added unicode symbols (\u command) support
* Localizations
	** Danish localization done by Jens Kaestel, sponsored by Panacea Supplies
	** Danish hyphenation patterns imported by Dennis Sheil of Panacea Supplies
	** Added Persian localization by HYIPEDU Team
	** Added Basque localization by Ibon Idoiaga Basaras from http://librezale.org
	** Added Armenian localization by Yavruhrat, Marat Yavrumyan, Ruben Tarumian
	** Updated French localization by Mathias Monnerville
* Small features & fixes
	** Help item in the main menu (opens F.A.Q. page on the site)
	** List views scrolling speed-up (https://github.com/geometer/FBReaderJ/issues/148)
* Internal changes
	** Current reading progress is saved in books db

===== 1.8.2 (Jun 13, 2013) =====
* Editable highlighting styles
* Bookmarks with no highlighting
* Two-column view in horizontal mode is enabled by default for 7" devices
* New color picker dialog (AmbilWarna library http://code.google.com/p/android-color-picker/ is used)
* Updated Spanish localization (by Diego Bernardi, sponsored by Panacea Supplies)
* Updated Czech localization (by Marek Pavelka)
* Updated Dutch localization (by Frank Fesevur)
* Bitknights dictionaries support (by Norbert Kenderesi)